more matlab section

--- a/Latex/ReportAG.bib
+++ b/Latex/ReportAG.bib
@@ -98,3 +98,12 @@ vol = {13, No. 4},
 pages = {313-336},
 year = {1994}
 }
+
+ @manual{Buss09,
+      title  = "Introduction to Inverse Kinematics with
+Jacobian Transpose, Pseudoinverse and Damped
+Least Squares methods",
+      author = "Samuel R. Buss",
+      url    = "http://www.math.ucsd.edu/~sbuss/ResearchWeb/ikmethods/iksurvey.pdf",
+      year   = "2009 (accessed October, 2014)"
+    }
