--- a/Latex/ReportAG.bib
+++ b/Latex/ReportAG.bib
@@ -1,5 +1,5 @@
 @INPROCEEDINGS{Fedor2003,
-author = {Martin Fedor},
+author = {Fedor, M.},
 title = {Application of Inverse Kinematics for Skeleton Manipulation in Real-time},
 pages = {201--210},
 booktitle = {Proceeding of Spring Conference on Computer Graphics 2003},
@@ -12,7 +12,7 @@ url = {http://www.fit.vutbr.cz/research/view_pub.php?id=7171}
 }
 
 @mastersthesis{Welman1993,
-	author		= "Chris Welman",
+	author		= "Welman, C.",
 	title		= "Inverse Kinematics and Geometric Constraints for Articulated Figure Manipulation",
 	school		= "Simon Fraser University",
 	year		= "1993",
@@ -20,22 +20,22 @@ url = {http://www.fit.vutbr.cz/research/view_pub.php?id=7171}
 }
 
 @BOOK{Crai55,
-author = {J. Craig},
+author = {Craig, J.},
 title = {Introduction to Robotics: Mechanics and Control},
 publisher = {Addison-Wesley},
 year = {1955}
 }
 
 @article{Madd04,
-author = {Meredith, M. and S.C.Maddock},
+author = {Meredith, M. and Maddock, S. C.},
 title = {Real-Time Inverse Kinematics: The Return of the Jacobian},
 publisher = {University of Sheffield},
-journaltitle = {Department of Computer Science Research Memorandum CS-04-06},
+journal = {Department of Computer Science Research Memorandum CS-04-06},
 year = {2004}
 }
 
 @thesis{Chin96,
-	author		= "K.W. Chin",
+	author		= "Chin, K.W.",
 	title		= "Closed-form and generalized
 inverse kinematic solutions for animating the human
 articulated structure",
@@ -44,9 +44,9 @@ articulated structure",
 }
 
 @article{Kwan00,
-author = {C. Kwang-Jin, K. Hyeong-Seok},
+author = {Kwang-Jin, C. and Hyeong-Seok, K. },
 title = {On-line Motion Retargetting},
-journaltitle = {The Journal of Visualization and
+journal = {The Journal of Visualization and
 Computer Animation},
 vol = {11},
 pages = {223-235},
@@ -54,26 +54,26 @@ year = {2000}
 }
 
 @article{Paul88,
-author = {R. P. Paul, B. Shimano, G. E. Mayer},
+author = {Paul, R. P. , Shimano, B., Mayer, G. E. },
 title = {Kinematic Control Equations for Simple Manipulators},
-journaltitle = {IEEE Transactions on System, Man \& Cybernetics},
+journal = {IEEE Transactions on System, Man \& Cybernetics},
 vol = {11, No. 6},
 year = {1988}
 }
 
 @article{Eber01,
-author = {D. H. Eberly},
+author = {Eberly, D. H.},
 title = {3D Game Engine Design},
 publisher = {Morgan Kaufmann},
 year = {2001}
 }
 
 @article{Wang91,
-author = {L. Wang, C. Chen},
+author = { Wang, L., Chen, C.},
 title = {A Combined Optimisation
 Method for Solving the Inverse Kinematics Problem of
 Mechanical Manipulators},
-journaltitle = {IEEE Transactions on
+journal = {IEEE Transactions on
 Robotics \& Applications},
 vol = {7, No. 4},
 pages = {p.489-499},
@@ -81,29 +81,30 @@ year = {1991}
 }
 
 @article{Watt92,
-author = {A. Watt, M. Watt},
+author = {Watt, A. , Watt, M. },
 title = {Advanced animation and
 rendering techniques},
-journaltitle = {Addison-Wesley},
+journal = {Addison-Wesley},
 year = {1992}
 }
 
 @article{Zhao94,
-author = {J. Zhao, N. I. Badler},
+author = {Zhao, J. , Badler, N. I.},
 title = {Inverse Kinematics
 Positioning Using Nonlinear Programming for Highly
 Articulated Figures},
-journaltitle = {ACM Transactions on Graphics},
+journal = {ACM Transactions on Graphics},
 vol = {13, No. 4},
 pages = {313-336},
 year = {1994}
 }
 
  @manual{Buss09,
-      title  = "Introduction to Inverse Kinematics with
+ 	author = "Buss, S.R.",
+    title  = "Introduction to Inverse Kinematics with
 Jacobian Transpose, Pseudoinverse and Damped
 Least Squares methods",
-      author = "Samuel R. Buss",
+      
       url    = "http://www.math.ucsd.edu/~sbuss/ResearchWeb/ikmethods/iksurvey.pdf",
       year   = "2009 (accessed October, 2014)"
     }
